<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".BaseActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_go_to_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_to_list_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_go_to_shared_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_to_sharpref_label" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_go_to_sqlite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/go_to_sqlite_label" />

</LinearLayout>